<resources>
    <string name="app_name">BookStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookstore">Bookstore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="if_don_t_have_account">If don\'t have account?</string>
    <string name="signup">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="mobilenumber">MobileNumber</string>
    <string name="Register">Register</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>
    <string name="logout">Logout</string>
    <string name="help_centre">Help Centre</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="wishlist">WISHLIST</string>
    <string name="books">Books</string>
    <string name="by">by</string>
    <string name="rs">Rs.</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="remove">Remove</string>
    <string name="customer_details">Customer Details</string>
    <string name="phone_number">Phone Number</string>
    <string name="pincode">Pincode</string>
    <string name="locality">Locality</string>
    <string name="address">Address</string>
    <string name="city_town">City/Town</string>
    <string name="landmark">Landmark</string>
    <string name="order_continue">CONTINUE</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_checkout">CHECKOUT</string>
    <string name="your_order">Your Order</string>
    <string name="final_text">hurray!!! your order is confirmed for further communication save the order id</string>
    <string name="continue_shopping">CONTINUE SHOPPING</string>
    <string name="city_state">State</string>
    <string name="order_details">Order Confirmed</string>
</resources>