<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_one"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/logo_register"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/bookstore_logo"
                android:background="@color/background"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/bookstore"
                android:layout_gravity="center"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_one"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/register_Email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:drawableEnd="@drawable/ic_baseline_email_24"
            android:hint="@string/email"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:background="@drawable/email_text_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/register_Password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_baseline_password_24"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:background="@drawable/email_text_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_Email" />

        <EditText
            android:id="@+id/register_Confirm_Password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_baseline_password_24"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:background="@drawable/email_text_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_Password" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_baseline_account_circle_24"
            android:hint="Username"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:background="@drawable/email_text_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_Confirm_Password" />

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_baseline_local_phone_24"
            android:hint="Phone"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:background="@drawable/email_text_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_username" />

        <Button
            android:id="@+id/register_Button"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="-100dp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/background"
            android:text="@string/Register"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_phone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_Button">

            <TextView
                android:id="@+id/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/already_have_an_account"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/go_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:text="@string/signin"
                android:textColor="@color/background"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>