<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cart_book_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        app:cardCornerRadius="5dp"
        android:layout_margin="2dp"
        android:clickable="true" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/cart_remove_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_baseline_close_24"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:background="#D81B60"
                android:backgroundTint="#D81B60"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/open_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:clickable="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/cart_book_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/cart_book_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    app:layout_constraintStart_toEndOf="@id/cart_book_image"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_book_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/cart_book_image"
                    app:layout_constraintTop_toBottomOf="@id/cart_book_name"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/cart_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/by"
                        android:textSize="15sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/cart_book_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/cart_by"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text=""
                        android:textSize="15sp"
                        android:textColor="@color/black" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_book_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/layout_book_author"
                    app:layout_constraintStart_toEndOf="@id/cart_book_image"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/cart_rs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/rs"
                        android:textSize="15sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/cart_book_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/cart_rs"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text=""
                        android:textSize="15sp"
                        android:textColor="@color/black" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cart_book_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:padding="2dp">

                    <ImageButton
                        android:id="@+id/increase_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_add_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@drawable/add_sub_bg_layout"
                        android:layout_margin="5dp"/>

                    <TextView
                        android:id="@+id/item_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/increase_item"
                        app:layout_constraintEnd_toStartOf="@id/decrease_item"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@drawable/item_count"
                        android:layout_margin="5dp"/>

                    <ImageButton
                        android:id="@+id/decrease_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_remove_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@drawable/add_sub_bg_layout"
                        android:layout_margin="5dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expand_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/open_order"
                android:padding="5dp">

                <TextView
                    android:id="@+id/customer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_details"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="5dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/address_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/customer_text"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="5dp" >

                    <EditText
                        android:id="@+id/c_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/order_text_layout"
                        android:hint="@string/name"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_margin="5dp"/>

                    <EditText
                        android:id="@+id/c_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/order_text_layout"
                        android:hint="@string/phone_number"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/c_name"
                        android:layout_margin="5dp"/>

                    <EditText
                        android:id="@+id/c_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/order_text_layout"
                        android:hint="@string/address"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/c_number"
                        android:layout_margin="5dp"/>

                    <EditText
                        android:id="@+id/c_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/order_text_layout"
                        android:hint="@string/city_town"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/c_address"
                        android:layout_margin="5dp"/>

                    <EditText
                        android:id="@+id/c_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/order_text_layout"
                        android:hint="@string/city_state"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/c_city"
                        android:layout_margin="5dp"/>

                    <EditText
                        android:id="@+id/c_pincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/order_text_layout"
                        android:hint="@string/pincode"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/c_state"
                        android:layout_margin="5dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/continue_order_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@drawable/button_background"
                    android:backgroundTint="@color/background"
                    android:text="@string/order_continue"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_margin="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_layout"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>